<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/ucsb"
    android:backgroundTint="#80FFFFFF"
    android:backgroundTintMode="src_over">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/first_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/find"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:drawableTop="@drawable/ic_find_listing"
                app:cornerRadius="15dp"
                android:theme="@style/Theme.MaterialComponents"
                android:text="Search" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/my_listings"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginLeft="10dp"
                android:drawableTop="@drawable/ic_my_listings"
                app:cornerRadius="15dp"
                android:theme="@style/Theme.MaterialComponents"
                android:text="My Items"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_listing"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginLeft="10dp"
                android:drawableTop="@drawable/ic_create_listing"
                app:cornerRadius="15dp"
                android:theme="@style/Theme.MaterialComponents"
                android:text="Sell Item"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/profile"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:drawableTop="@drawable/ic_profile"
                app:cornerRadius="15dp"
                android:layout_marginLeft="63dp"
                android:theme="@style/Theme.MaterialComponents"
                android:text="Profile" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/message"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginLeft="25dp"
                android:drawableTop="@drawable/ic_message"
                android:text="Message"
                android:theme="@style/Theme.MaterialComponents"
                app:cornerRadius="15dp" />
        </LinearLayout>
    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="vertical"-->
<!--        tools:layout_editor_absoluteX="1dp"-->
<!--        tools:layout_editor_absoluteY="46dp">-->

<!--        <Button-->
<!--            android:id="@+id/find"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Find" />-->

<!--        <TextView-->
<!--            android:id="@+id/textView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Looking to buy something? Explore items that other users are selling and see if they match your needs!"-->
<!--            android:textColor="#000000"/>-->

<!--        <Button-->
<!--            android:id="@+id/share"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Share" />-->

<!--        <TextView-->
<!--            android:id="@+id/textView3"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Sell some items that you might not need anymore to get some of your money back!"-->
<!--            android:textColor="#000000" />-->

<!--        <Button-->
<!--            android:id="@+id/message"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Message" />-->

<!--        <TextView-->
<!--            android:id="@+id/textView4"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Directly communicate with buyers and sellers that you're concerned with!"-->
<!--            android:textColor="#000000" />-->

<!--        <Button-->
<!--            android:id="@+id/profile"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Profile"-->
<!--            />-->

<!--        <TextView-->
<!--            android:id="@+id/textView5"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Share your personal information, social media accounts, location, and payment methods to other users in exchange for better experience of trading!"-->
<!--            android:textColor="#000000"/>-->
<!--    </LinearLayout>-->

</RelativeLayout>