<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="300"
        android:title="Search here..."
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"/>


</menu>